complete board insert and delete

--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,13 @@
 		    <version>1.9.2</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<dependency>
+		    <groupId>com.amazonaws</groupId>
+		    <artifactId>aws-java-sdk-s3</artifactId>
+		    <version>1.11.1024</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
 		<dependency>
 		    <groupId>com.zaxxer</groupId>
@@ -232,7 +239,11 @@
 			<version>1.16</version>
 		</dependency>
 
-
+		<dependency> 
+			<groupId>org.imgscalr</groupId> 
+			<artifactId>imgscalr-lib</artifactId> 
+			<version>4.2</version> 
+		</dependency>
 		
 		
 		
